Axis moves with object when othro-locking movement and using local transform. #77183

Closed
opened 2020-05-30 03:27:03 +02:00 by Alaska · 7 comments
Member

System Information
Operating system: Linux-5.4.0-7629-generic-x86_64-with-debian-bullseye
Graphics card: GTX 1050Ti 440.82

Blender Version
Broken: version: 2.90.0 2ee94c954d (2020-05-29 18:08)
Worked: 2.90.0 06860ba29b (2020-05-22 15:21)

This issue does not occur in 2.83.0

Bisecting Blender master shows 2.90 2020-05-22 15:21 c75a665c44 as the cause for the issue.

Exact steps for others to reproduce the error

  1. Select an object and make sure you're in object mode. Other modes don't seem to exhibit this issue.
  2. Change the transform orientation to Local. The option be found at the top of the 3D viewport.
  3. Move the object using G and constrain the movement to two axis (E.G. Use the keyboard shortcut Shift+Z to constrain to X and Y)
  4. As you move the object, you'll notice that the axis will move with the object like can be seen in the video.

2020-05-30 12-47-14.mp4

**System Information** Operating system: Linux-5.4.0-7629-generic-x86_64-with-debian-bullseye Graphics card: GTX 1050Ti 440.82 **Blender Version** Broken: version: 2.90.0 `2ee94c954d` (2020-05-29 18:08) Worked: 2.90.0 `06860ba29b` (2020-05-22 15:21) This issue does not occur in 2.83.0 Bisecting Blender master shows 2.90 2020-05-22 15:21 c75a665c44 as the cause for the issue. **Exact steps for others to reproduce the error** 1. Select an object and make sure you're in object mode. Other modes don't seem to exhibit this issue. 2. Change the transform orientation to `Local`. The option be found at the top of the 3D viewport. 3. Move the object using `G` and constrain the movement to two axis (E.G. Use the keyboard shortcut `Shift+Z` to constrain to X and Y) 4. As you move the object, you'll notice that the axis will move with the object like can be seen in the video. [2020-05-30 12-47-14.mp4](https://archive.blender.org/developer/F8564153/2020-05-30_12-47-14.mp4)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Author
Member

@mano-wii this seems like a task for you.

@mano-wii this seems like a task for you.
Germano Cavalcante self-assigned this 2020-05-30 04:35:28 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by a574478d90

This issue was referenced by a574478d901aef5c22b9f3a4f8ac69e4b87411b8

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author
Member

Thank you @mano-wii

Thank you @mano-wii
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77183
No description provided.